--- a/base.css
+++ b/base.css
@@ -4,6 +4,7 @@ body {
   font-size: 16px;
   line-height: 1.8;
   color: #868e96;
+  background-color: rgb(248, 249, 250);
 }
 
 a {
@@ -38,10 +39,6 @@ header {
   margin-top: 10px;
 }
 
-.heading{
-  color: #c267df;
-}
-
 .section {
   padding: 4em 0;
 }
@@ -60,4 +57,10 @@ header {
 
 .list-group-item.list-group-item-action:hover{
   background-color: #c267df;
+}
+
+.navbar-logo {
+  color: #c267df !important;
+  font-family: fantasy !important;
+  font-size: 1.5rem !important;
 }
