--- a/base.css
+++ b/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap');
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
@@ -61,6 +62,10 @@ header {
 
 .navbar-logo {
   color: #c267df !important;
-  font-family: fantasy !important;
+  font-family: "Jaro", sans-serif !important;
   font-size: 1.5rem !important;
+  font-optical-sizing: auto;
+  font-size: normal;
+  font-weight: 400;
+  
 }
