--- a/base.css
+++ b/base.css
@@ -5,7 +5,7 @@ body {
   font-size: 16px;
   line-height: 1.8;
   color: #868e96;
-  background-color: rgb(248, 249, 250);
+  background-color: rgb(33 37 41);
 }
 
 a {
